--- a/package.json
+++ b/package.json
@@ -7,12 +7,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^9.2.0",
+    "@types/classnames": "^2.2.10",
+    "classnames": "^2.2.6",
+    "next": "^9.4.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
   "devDependencies": {
+    "@types/node": "^14.0.1",
+    "@types/react": "^16.9.35",
     "postcss-preset-env": "^6.7.0",
-    "tailwindcss": "^1.4.0"
+    "tailwindcss": "^1.4.0",
+    "typescript": "^3.9.2"
   }
 }
