--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
   "dependencies": {
     "@types/classnames": "^2.2.10",
     "classnames": "^2.2.6",
+    "dayjs": "^1.8.27",
+    "gray-matter": "^4.0.2",
     "next": "^9.4.1",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "remark-parse": "^8.0.2",
+    "remark-react": "^7.0.1",
+    "unified": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.0.1",
