add debug stuff

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "vercel-build": "yum -y groupinstall 'Development Tools' && yum install -y nodejs cairo cairo-devel cairomm-devel libjpeg-turbo-devel pango pango-devel pangomm pangomm-devel giflib-devel && cp /usr/lib64/{libfreetype.so.6} lib/ && yum install libuuid-devel libmount-devel && cp /lib64/{libuuid,libmount,libblkid}.so.1 node_modules/canvas/build/Release/ && npm run build"
+    "vercel-build": "ls -al /usr/lib64 && yum -y groupinstall 'Development Tools' && yum install -y nodejs cairo cairo-devel cairomm-devel libjpeg-turbo-devel pango pango-devel pangomm pangomm-devel giflib-devel && cp /usr/lib64/{libfreetype.so.6} lib/ && yum install libuuid-devel libmount-devel && cp /lib64/{libuuid,libmount,libblkid}.so.1 node_modules/canvas/build/Release/ && npm run build"
   },
   "dependencies": {
     "canvas": "^2.6.1",
